--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,5 +1,3 @@
-version: 2
-
 linters:
   enable:
     - bodyclose
@@ -9,7 +7,9 @@ linters:
     - prealloc
     - reassign
     - gocritic
+    - gofmt
     - govet
+    - gosimple
     - unconvert
     - unparam
     - unused
